Fix: truncate squished breadcrumb

--- a/app/assets/stylesheets/hera/modules.scss
+++ b/app/assets/stylesheets/hera/modules.scss
@@ -83,6 +83,8 @@
 
   .breadcrumb-item {
     white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
 
     &.active {
       color: $text-muted;
